--- a/proctoring/styles.css
+++ b/proctoring/styles.css
@@ -42,6 +42,10 @@ div.panel {
 Universal Elements
 *********************/
 
+body {
+    font-family: calibri;
+}
+
 img {
     border: 1px solid lightgray;
 }
