--- a/proctoring/styles.css
+++ b/proctoring/styles.css
@@ -12,6 +12,7 @@ button.accordion {
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    font-family: ubuntu;
 }
 
 button.accordion.active, button.accordion:hover {
@@ -54,4 +55,5 @@ img {
 li {
     margin: 15px 0 0 0;
 }
+
 
