--- a/remotelab/OverwriteCSS.css
+++ b/remotelab/OverwriteCSS.css
@@ -1,3 +1,5 @@
+/* Link to remote labs https://electromeet.com/RemoteLabWeb */
+
 /* Header size increase of title 'List of available remote labs' */
 span {
     font-size: 300%;
